...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAn-41-py1">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
                                        <state key="normal" title="Sign Up"/>
                                        <connections>
                                            <segue destination="GHg-sc-Llf" kind="show" identifier="SignUpSegue" id="qQA-74-9hM"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ckf-8j-gex">
                                        <rect key="frame" x="0.0" y="66" width="334" height="50"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <segue destination="eJW-dT-vob" kind="show" identifier="SignInSegue" id="wch-rk-ylO"/>
...
                                <rect key="frame" x="40" y="128" width="334" height="198"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4EM-6b-wyn">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kQd-EP-8Uk">
                                        <rect key="frame" x="0.0" y="74" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="40" y="128" width="334" height="420"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rw5-MU-gOS">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="buO-WL-2sb">
                                        <rect key="frame" x="0.0" y="74" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wko-dG-VgF">
                                        <rect key="frame" x="0.0" y="148" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8uU-uE-DN2" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Private" image="pencil.and.ellipsis.rectangle" catalog="system" id="3Wr-xy-Tjw"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CmP-xK-Ong">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="thx-Up-M7w" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Public" image="list.dash" catalog="system" id="oba-OK-swo"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BzL-kv-3Jk">
...
